--- a/home-finder/src/index.css
+++ b/home-finder/src/index.css
@@ -21,6 +21,18 @@
   margin: 0 auto;
 }
 
+.container-lg {
+  max-width: 80%;
+  margin: 0 auto;
+}
+
+@media (max-width: 1280px) {
+  .container-lg {
+    max-width: 100%;
+    margin: 0 auto;
+  }
+}
+
 @layer components {
   .input-box {
     @apply mt-1 block px-3 py-2 bg-white border border-slate-300 rounded-lg text-sm shadow-sm placeholder-slate-400 focus:outline-none focus:border-blue-600 focus:ring-1 focus:ring-blue-600 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 disabled:shadow-none invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 text-black;
